<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">HiLauncher</string>

    <string name="hello_world">Google Android</string>
    <string name="action_settings">Settings</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="am">AM</string>
    <string name="pm">PM</string>

    <string name="select_app_title">Please select an APP</string>
    <string name="allapps">All Apps</string>

    <string name="vod">VOD</string>
    <string name="live">Live</string>
    <string name="media_center">MediaCenter</string>
    <string name="app_store">App Store</string>
    <string name="all_apps">All Apps</string>
    <string name="settings">Settings</string>

    <string name="weather_refresh">Refreshing...</string>
    <string name="no_del_sys_app">System application cannot uninstall</string>
    <string name="please_sure">Please confirm whether the uninstaill<xliff:g id="part1">%1$s</xliff:g>?</string>
    <string name="ok">OK</string>
    <string name="details">Details</string>
</resources>
